lecture iii tools

--- a/Lecture_iii_AI_Libs/Lecture_iii_AI_Libs.ipynb
+++ b/Lecture_iii_AI_Libs/Lecture_iii_AI_Libs.ipynb
@@ -265,22 +265,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1. 1. 1.]\n",
-      " [1. 1. 1.]]\n",
-      "l 的数据类型为: float64\n",
-      "[[1 1 1]\n",
-      " [1 1 1]]\n",
-      "l 的数据类型为: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -301,30 +288,16 @@
    "source": [
     "在创建数组之后，可以通过多种方式修改数组的值，如直接赋值、切片赋值等。\n",
     "\n",
-    "我们还可以使用 `np.reshape()` 函数改变数组的形状，但是要注意，改变形状之后，数组的元素个数不能发生变化。\n",
+    "我们还可以使用 `np.reshape()` 函数或 `ndarray` 的 `reshape()` 方法改变数组的形状。但是要注意，改变形状之后，数组的元素个数不能发生变化。\n",
     "\n",
     "如，一个 4x6 的数组，可以改变为 3x8 的数组，但是不能改变为 5x5 的数组。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "通过 arange 创建的一维数组:\n",
-      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23]\n",
-      "通过 reshape 转换为 4x6 的二维数组:\n",
-      "[[ 0  1  2  3  4  5]\n",
-      " [ 6  7  8  9 10 11]\n",
-      " [12 13 14 15 16 17]\n",
-      " [18 19 20 21 22 23]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -340,29 +313,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "通过 arange 创建的一维数组:\n",
-      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23]\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "cannot reshape array of size 24 into shape (5,5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[26], line 9\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(l)\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# 只有变化后元素个数与原数组元素个数相等时，reshape 才能成功\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m l \u001b[38;5;241m=\u001b[39m l\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m5\u001b[39m)\n",
-      "\u001b[0;31mValueError\u001b[0m: cannot reshape array of size 24 into shape (5,5)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -386,38 +339,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a:\n",
-      "[[0 1 2]\n",
-      " [3 4 5]\n",
-      " [6 7 8]]\n",
-      "b:\n",
-      "[[1 1 1]\n",
-      " [1 1 1]\n",
-      " [1 1 1]]\n",
-      "a + b:\n",
-      "[[1 2 3]\n",
-      " [4 5 6]\n",
-      " [7 8 9]]\n",
-      "\n",
-      "a * b:\n",
-      "[[0 1 2]\n",
-      " [3 4 5]\n",
-      " [6 7 8]]\n",
-      "\n",
-      "a 内每个元素加 5:\n",
-      "[[ 5  6  7]\n",
-      " [ 8  9 10]\n",
-      " [11 12 13]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -455,29 +379,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a:\n",
-      "[[ 1  2  3  4]\n",
-      " [ 5  6  7  8]\n",
-      " [ 9 10 11 12]]\n",
-      "b:\n",
-      "[[ 1  2  3]\n",
-      " [ 4  5  6]\n",
-      " [ 7  8  9]\n",
-      " [10 11 12]]\n",
-      "a 与 b 的矩阵乘法结果:\n",
-      "[[ 70  80  90]\n",
-      " [158 184 210]\n",
-      " [246 288 330]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -500,6 +404,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "NumPy 还有一些其他的运算函数，如对 `ndarray` 的统计运算（求和、求平均值、求最大值、求最小值等）、对 `ndarray` 应用数学函数（如三角函数、指数函数等）等。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 使用 ndarray 的方法进行运算\n",
+    "import numpy as np\n",
+    "\n",
+    "a = np.random.randint(0, 100, 100)\n",
+    "\n",
+    "print(\"a:\")\n",
+    "print(a)\n",
+    "\n",
+    "print(f\"a 中元素的和为: {a.sum()}\")\n",
+    "print(f\"a 中元素的最小值为: {a.min()}\")\n",
+    "print(f\"a 中元素的平均数为: {a.mean()}\")\n",
+    "print(f\"a 中元素的标准差为: {a.std()}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "可以在 https://numpy.org/doc/stable/user/quickstart.html 查询 NumPy 的更多基础功能。"
    ]
   },
@@ -507,7 +438,115 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 2: PyTorch"
+    "### 1.7 NumPy 的优势\n",
+    "\n",
+    "NumPy 的优势在于比 Python 的 List 更加高效的存储和运算。\n",
+    "\n",
+    "下面的两个例子均为计算 5000x5000 的，一个全 0 一个全 1 的矩阵的和，可以看到 NumPy 的速度比原生 Python 快很多。\n",
+    "\n",
+    "如果数据量更大呢？计算过程更复杂呢？"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Python List 存储矩阵\n",
+    "a = [[0 for _ in range(5000)] for _ in range(5000)]\n",
+    "b = [[1 for _ in range(5000)] for _ in range(5000)]\n",
+    "\n",
+    "result = [[0 for _ in range(5000)] for _ in range(5000)]\n",
+    "\n",
+    "# 手动实现矩阵加法\n",
+    "for i in range(500):\n",
+    "    for j in range(500):\n",
+    "        result[i][j] = a[i][j] + b[i][j]\n",
+    "        \n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 使用 numpy 实现矩阵加法\n",
+    "import numpy as np\n",
+    "\n",
+    "a = np.zeros((5000, 5000))\n",
+    "b = np.ones((5000, 5000))\n",
+    "\n",
+    "result = a + b\n",
+    "\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 2: PyTorch\n",
+    "\n",
+    "PyTorch 是一个开源的机器学习库，它提供了很多用于构建机器学习模型的工具。\n",
+    "\n",
+    "接下来我们会以 Lecture 8 中的感知机和 Lecture 9 中的多层感知机为例，展示如何使用 PyTorch 来实现训练模型与使用模型求解。\n",
+    "\n",
+    "### 2.1 安装 PyTorch\n",
+    "\n",
+    "在运行了 notebook 开头的代码块之后，你已经安装了 PyTorch。\n",
+    "\n",
+    "这里的 PyTorch 是基于 CPU 的版本，如果你想使用 GPU 来加速计算，卸载当前版本的 PyTorch，然后按照 [PyTorch 官网](https://pytorch.org/get-started/locally/) 的指引安装对应平台、对应 CUDA 版本的 PyTorch。\n",
+    "\n",
+    "### 2.2 任务描述\n",
+    "\n",
+    "通过 [Bank-Note-Authentication\n",
+    "](https://www.kaggle.com/datasets/shanks0465/banknoteauthentication) 数据集里面采集的部分真钞与假钞的特征，我们将训练一个感知机模型，用于区分真钞与假钞。\n",
+    "\n",
+    "数据集中包含五列信息：\n",
+    "\n",
+    "1. 图像经小波变换后的方差(variance)\n",
+    "2. 图像经小波变换后的偏态(skewness)\n",
+    "3. 图像经小波变换后的峰度(curtosis)\n",
+    "4. 图像的熵(entropy)\n",
+    "5. 图像里的钞票类型（一个为 0 或 1 的整数）\n",
+    "\n",
+    "可以发现这是我们提到的二分类问题，我们可以取出两个特征，作为感知机训练用的点集 $\\left\\{(x_1^{(i)}, x_2^{(i)}, y^{(i)}\\right\\}$ 中的 $x_1^{(i)}$ 和 $x_2^{(i)}$，将钞票类型作为标签 $y^{(i)}$。\n",
+    "\n",
+    "<img src=\"./images/box.png\" width=\"75%\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 3.6216  -0.44699]\n",
+      " [ 4.5459  -1.4621 ]\n",
+      " [ 3.866    0.10645]\n",
+      " ...\n",
+      " [-3.7503  -2.7771 ]\n",
+      " [-3.5637  -1.2823 ]\n",
+      " [-2.5419   1.1952 ]]\n",
+      "[0. 0. 0. ... 1. 1. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "file_name = 'data_banknote_authentication.csv'\n",
+    "\n",
+    "data = np.loadtxt(file_name, delimiter=',')\n",
+    "\n",
+    "x = data[:, [0, 3]]\n",
+    "y = data[:, 4]\n"
    ]
   }
  ],
